--- a/src/Components/Chat/Chat.css
+++ b/src/Components/Chat/Chat.css
@@ -24,3 +24,37 @@
 .chat__headerInfo > span {
   color: gray;
 }
+
+.chat__body {
+  flex: 1;
+  background-color: #ffcc00;
+  padding: 30px;
+  overflow: auto;
+}
+
+.chat__message {
+  position: relative;
+  font-size: 16px;
+  padding: 10px;
+  width: fit-content;
+  border-radius: 10px;
+  background-color: white;
+  margin-bottom: 30px;
+}
+
+.chat__receiver {
+  margin-left: auto;
+  background-color: #dcf8c6;
+}
+
+.chat__timestamp {
+  margin-left: 10px;
+  font-size: xx-small;
+}
+
+.chat__name {
+  position: absolute;
+  top: -15px;
+  font-weight: 800;
+  font-size: xx-small;
+}
